# MultipleBodyProblem

./: .gitignore  README.md  pyproject.toml  runner.sh
multiplebodyproblem/: animator.py  generator.py  kernel_algorithms.py  main.py  utils.py  visualization.py
