[project]
name = "multiplebodyproblem"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "astroquery>=0.4.11",
    "cupy-cuda12x>=13.6.0",
    "matplotlib>=3.10.8",
    "numba>=0.63.1",
    "pandas>=2.3.3",
    "pyqt5>=5.15.11",
]
